# invoice-pdf-rs

./: .gitignore  Cargo.toml  plan.md
invoice-pdf/: Cargo.toml
invoice-pdf-cli/: Cargo.toml
invoice-pdf-cli/src/: cli.rs  main.rs
invoice-pdf/src/: error.rs  invoice.rs  lib.rs  template_env.rs
invoice-pdf/templates/: base.html
src/: error.rs  invoice.rs  lib.rs  main.rs  template_env.rs
templates/: base.html
