[package]
name = "invoice-pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = "0.4.10"
chrono = "0.4.43"
derive_builder = "0.20.2"
fantoccini = "0.22.0"
minijinja = { version = "2.15.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
