[package]
name = "invoice-pdf"
version = "0.1.1"
edition = "2024"

[dependencies]
base64 = "0.22"
bigdecimal = "0.4"
chrono = "0.4"
derive_builder = "0.20"
fantoccini = "0.22"
minijinja = { version = "2.15" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
