[package]
name = "invoice-pdf"
version = "0.2.10"
edition = "2024"

[dependencies]
askama = "0.15.4"
base64 = "0.22"
bigdecimal = "0.4"
chrono = "0.4"
derive_builder = "0.20"
fantoccini = "0.22"
gtin = { git = "https://github.com/areif-dev/gtin", version = "1.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
